--- a/triangle_01/triangle.html
+++ b/triangle_01/triangle.html
@@ -14,10 +14,12 @@ main()
 <script id="fragment-shader" type="x-shader/x-fragment">
 precision mediump float;
 
+uniform vec4 u_Color;
+
 void
 main()
 {
-    gl_FragColor = vec4( 1.0, 0.0, 0.0, 1.0 );
+    gl_FragColor = u_Color;
 }
 </script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
